<?xml version="1.0" ?><package format="2">
  <name>hive_dji_bridge</name>
  <version>0.0.7</version>
  <description>The hive_dji_bridge package</description>
  <maintainer email="support@hive.aero">HIVE</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dji_osdk_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>